# eval-Register

./: CMakeLists.txt  FindJulia.cmake  README.md  evalregister.cpp
src/: CMakeLists.txt  FigureViewer.cpp  FigureViewer.h  FindJulia.cmake  evalregister.cpp  evalregister.h  evalregister.ui  main.cpp  myapp.rc
src/methods/: AllSTEPs.jl  CODE_BinBehavior.jl  CODE_SPEC.jl  CODE_STEP01_Figures.jl  CODE_STEP_00.jl  CODE_STEP_01.jl  DEPS_01.jl  GRAPHS_01.jl  MODULE_GRAPHS.jl  MODULE_STEP_01.jl  Suppressor.jl
src/resources/cbar/: cbarPlot.jl
